iOS 12 version detection and dialog

--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="icon" href="/public/images/favicon.ico" type="image/x-icon">
   <link type="text/css" rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+  <script type="text/javascript" src="https://webrtchacks.github.io/adapter/adapter-latest.js"></script>
   <script type="module" src="app.js"></script>
 </head>
 <div id="player"></div>
